--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.18.2",
+    "react-navigation": "^4.4.4",
     "react-redux": "^8.0.1",
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
