--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-permissions": "^3.3.1",
+    "react-native-progress": "^5.0.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.8.0",
