--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "appcenter-analytics": "^4.4.4",
     "appcenter-crashes": "^4.4.4",
     "axios": "^0.27.2",
+    "deprecated-react-native-prop-types": "^2.2.0",
+    "expo-linear-gradient": "^11.3.0",
     "fbjs": "^3.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
@@ -40,6 +42,7 @@
     "react-native-config": "^1.4.5",
     "react-native-date-picker": "^4.2.1",
     "react-native-device-info": "^8.7.1",
+    "react-native-dialog": "^9.2.1",
     "react-native-document-picker": "^8.1.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
@@ -58,6 +61,7 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.1.0",
@@ -76,6 +80,7 @@
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2"
