--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-code-push": "^7.0.4",
     "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.4.5",
