--- a/package.json
+++ b/package.json
@@ -29,18 +29,13 @@
     "appcenter-analytics": "^4.4.4",
     "appcenter-crashes": "^4.4.4",
     "axios": "^0.27.2",
-    "crypto-js": "^4.1.1",
     "deprecated-react-native-prop-types": "^2.2.0",
-    "expo": "^45.0.5",
     "expo-linear-gradient": "^11.3.0",
-    "expo-splash-screen": "^0.15.1",
-    "expo-updates": "^0.13.2",
     "fbjs": "^3.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-code-push": "^7.0.4",
@@ -70,9 +65,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.2",
-    "react-native-unimodules": "^0.14.10",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "^0.18.1",
     "react-native-webview": "^11.18.2",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.1",
