--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "appcenter-analytics": "^4.4.4",
     "appcenter-crashes": "^4.4.4",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo-linear-gradient": "^11.3.0",
     "fbjs": "^3.0.4",
@@ -36,15 +37,18 @@
     "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-code-push": "^7.0.4",
     "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.4.5",
+    "react-native-currency-input": "^1.0.1",
     "react-native-date-picker": "^4.2.1",
     "react-native-device-info": "^8.7.1",
     "react-native-dialog": "^9.2.1",
     "react-native-document-picker": "^8.1.0",
+    "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-modal": "^13.0.1",
@@ -65,6 +69,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.2",
+    "react-native-unimodules": "^0.14.10",
     "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.18.2",
     "react-navigation": "^4.4.4",
