--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-slideshow": "^1.0.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
