--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "pod:reinstall": "(rm -rf ios/Pods; rm -rf ios/Podfile.lock) && yarn pod:install",
+    "android:clean": "(cd android; ./gradlew clean)",
+    "pod:install": "(cd ios; pod install)",
+    "clean:babel": "rm -rf ./node_modules/.cache/babel-loader"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.4",
@@ -51,6 +55,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-permissions": "^3.3.1",
