--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "pod:reinstall": "(rm -rf ios/Pods; rm -rf ios/Podfile.lock) && yarn pod:install",
     "android:clean": "(cd android; ./gradlew clean)",
     "pod:install": "(cd ios; pod install)",
-    "clean:babel": "rm -rf ./node_modules/.cache/babel-loader",
-    "reinstall": "(rm -rf ./node_modules; yarn install)"
+    "clean:babel": "rm -rf ./node_modules/.cache/babel-loader"
   },
   "dependencies": {
-    "@mindinventory/react-native-tab-bar-interaction": "^2.2.3",
     "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/geolocation": "^2.1.0",
@@ -84,7 +82,8 @@
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
-    "victory-native": "^36.6.0"
+    "rn-fetch-blob": "^0.12.0",
+    "victory-native": "^36.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
