--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "pod:reinstall": "(rm -rf ios/Pods; rm -rf ios/Podfile.lock) && yarn pod:install",
     "android:clean": "(cd android; ./gradlew clean)",
     "pod:install": "(cd ios; pod install)",
-    "clean:babel": "rm -rf ./node_modules/.cache/babel-loader"
+    "clean:babel": "rm -rf ./node_modules/.cache/babel-loader",
+    "reinstall": "(rm -rf ./node_modules; yarn install)"
   },
   "dependencies": {
+    "@mindinventory/react-native-tab-bar-interaction": "^2.2.3",
     "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/geolocation": "^2.1.0",
@@ -34,6 +36,7 @@
     "appcenter-crashes": "^4.4.4",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "d3-shape": "^3.1.0",
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo-linear-gradient": "^11.3.0",
     "fbjs": "^3.0.4",
@@ -71,7 +74,7 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "^13.1.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.2",
     "react-native-unimodules": "^0.14.10",
@@ -82,8 +85,7 @@
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
-    "rn-fetch-blob": "^0.12.0",
-    "victory-native": "^36.5.2"
+    "victory-native": "36.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
