--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "android:clean": "(cd android; ./gradlew clean)",
     "pod:install": "(cd ios; pod install)",
     "clean:babel": "rm -rf ./node_modules/.cache/babel-loader",
-    "reinstall": "(rm -rf ./node_modules; yarn install)"
+    "reinstall": "(rm -rf ./node_modules; yarn install)",
+    "cleanAll": "watchman watch-del-all && rm -rf yarn.lock package-lock.json node_modules ios/Pods ios/Podfile.lock android/app/build && yarn install && cd ios && pod update && cd .. && yarn start -- --reset-cache"
   },
   "dependencies": {
     "@mindinventory/react-native-tab-bar-interaction": "^2.2.3",
@@ -34,6 +35,7 @@
     "appcenter": "^4.4.4",
     "appcenter-analytics": "^4.4.4",
     "appcenter-crashes": "^4.4.4",
+    "async-mutex": "^0.4.0",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "d3-shape": "^3.1.0",
@@ -84,6 +86,7 @@
     "react-redux": "^8.0.1",
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "victory-native": "36.5.2"
   },
