--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   "dependencies": {
     "@mindinventory/react-native-tab-bar-interaction": "^2.2.3",
     "@react-native-async-storage/async-storage": "^1.17.4",
-    "@react-native-community/cameraroll": "^4.1.2",
-    "@react-native-community/geolocation": "^2.1.0",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/auth": "^14.9.4",
@@ -43,6 +41,7 @@
     "expo-linear-gradient": "^11.3.0",
     "fbjs": "^3.0.4",
     "lodash": "^4.17.21",
+    "lodash.keys": "^4.2.0",
     "lottie-react-native": "^5.1.3",
     "moment": "^2.29.3",
     "prop-types": "^15.8.1",
@@ -66,7 +65,6 @@
     "react-native-permissions": "^3.3.1",
     "react-native-progress": "^5.0.0",
     "react-native-push-notification": "^8.1.1",
-    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.8.0",
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
@@ -74,6 +72,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-size-matters": "^0.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.1.0",
