--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo-linear-gradient": "^11.3.0",
     "fbjs": "^3.0.4",
+    "i18next": "^21.9.1",
     "lodash": "^4.17.21",
     "lodash.keys": "^4.2.0",
     "lottie-react-native": "^5.1.3",
     "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-i18next": "^9.0.10",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-code-push": "^7.0.4",
