--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <!-- These require runtime permissions on M -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -19,17 +21,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <queries>
-        <package android:name="vn.com.vng.zalopay" />
-        <package android:name="vn.com.vng.zalopay.sbmc" />
-    </queries>
 
     <!-- END OPTIONAL PERMISSIONS -->
     <application
         android:name=".MainApplication"
         android:label="@string/app_name"
-      android:icon="@drawable/logo"
-      android:roundIcon="@drawable/logo"
+      android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:usesCleartextTraffic="true"
       android:theme="@style/AppTheme">
@@ -38,7 +35,7 @@
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-        android:launchMode="singleTask"
+        android:launchMode="singleTop"
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
         <intent-filter>
@@ -46,13 +43,6 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
 
-<!-- ZaloPay -->
-          <intent-filter>
-              <action android:name="android.intent.action.VIEW" />
-              <category android:name="android.intent.category.DEFAULT" />
-              <category android:name="android.intent.category.BROWSABLE" />
-              <data android:scheme="bookworld"/>
-          </intent-filter>
       </activity>
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
     </application>
