--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -280,6 +280,9 @@ dependencies {
     // implementation fileTree(dir: 'E:\\Test', include: ['*.aar', '*.jar'], exclude: [])
 
     implementation 'com.squareup.okhttp3:okhttp:4.6.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
