--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'BookWorld'
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 // include ':zpdk-release-28052021'
 
 // apply from: '../node_modules/react-native-unimodules/gradle.groovy'
