--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.6.1",
+    "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.15",
@@ -79,8 +80,8 @@
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-simple-toast": "^1.1.3",
-    "react-native-slideshow": "^1.0.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-slideshow": "^1.0.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.1.0",
@@ -96,8 +97,8 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "resolve": "^1.22.1",
-    "victory-native": "36.5.2",
-    "stacktrace-parser": "0.1.4"
+    "stacktrace-parser": "0.1.4",
+    "victory-native": "36.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
