--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cleanAll": "watchman watch-del-all && rm -rf yarn.lock package-lock.json node_modules ios/Pods ios/Podfile.lock android/app/build && yarn install && cd ios && pod update && cd .. && yarn start -- --reset-cache"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@mindinventory/react-native-tab-bar-interaction": "^2.2.3",
     "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-native-community/push-notification-ios": "^1.10.1",
@@ -31,9 +32,6 @@
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@stripe/stripe-react-native": "^0.18.1",
-    "appcenter": "^4.4.4",
-    "appcenter-analytics": "^4.4.4",
-    "appcenter-crashes": "^4.4.4",
     "async-mutex": "^0.4.0",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
@@ -51,26 +49,21 @@
     "react": "17.0.2",
     "react-i18next": "^9.0.10",
     "react-native": "0.68.2",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-code-push": "^7.0.4",
     "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.4.5",
     "react-native-currency-input": "^1.0.1",
     "react-native-date-picker": "^4.2.1",
     "react-native-device-info": "^8.7.1",
-    "react-native-dialog": "^9.2.1",
-    "react-native-document-picker": "^8.1.0",
-    "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.6.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^5.4.15",
+    "react-native-pager-view": "^6.0.0",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.3.1",
     "react-native-progress": "^5.0.0",
     "react-native-push-notification": "^8.1.1",
-    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-radio-buttons-group": "^2.2.11",
     "react-native-reanimated": "^2.9.1",
     "react-native-render-html": "^6.3.4",
@@ -79,25 +72,21 @@
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-simple-toast": "^1.1.3",
-    "react-native-slideshow": "^1.0.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-slideshow": "^1.0.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.1.0",
     "react-native-tab-view": "^3.1.1",
-    "react-native-table-component": "^1.2.2",
-    "react-native-unimodules": "^0.14.10",
     "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.23.1",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.1",
-    "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "resolve": "^1.22.1",
-    "victory-native": "36.5.2",
-    "stacktrace-parser": "0.1.4"
+    "socket.io-client": "^4.5.2",
+    "victory-native": "36.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
