--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@gorhom/bottom-sheet": "^4.4.5",
     "@mindinventory/react-native-tab-bar-interaction": "^2.2.3",
     "@react-native-async-storage/async-storage": "^1.17.4",
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/auth": "^14.9.4",
@@ -60,6 +61,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.0.0",
+    "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.3.1",
     "react-native-progress": "^5.0.0",
@@ -86,6 +88,8 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "socket.io-client": "^4.5.2",
+    "resolve": "^1.22.1",
+    "stacktrace-parser": "0.1.4",
     "victory-native": "36.5.2"
   },
   "devDependencies": {
