--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "react-native-gesture-handler": "^2.6.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^6.0.0",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-pager-view": "^6.0.0",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.3.1",
     "react-native-progress": "^5.0.0",
@@ -77,6 +77,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-slideshow": "^1.0.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.1.0",
     "react-native-tab-view": "^3.1.1",
@@ -87,8 +88,8 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "socket.io-client": "^4.5.2",
     "resolve": "^1.22.1",
+    "socket.io-client": "^4.5.2",
     "stacktrace-parser": "0.1.4",
     "victory-native": "36.5.2"
   },
