--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -270,6 +270,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.2')
 
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
