--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
         "socket.io-client": "^4.5.2",
-        "victory-native": "36.5.2"
+        "victory-native": "36.5.2",
+        "yarn": "^1.22.19"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
