--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-native-device-info": "^8.7.1",
         "react-native-fast-image": "^8.5.11",
         "react-native-gesture-handler": "^2.6.1",
+        "react-native-image-picker": "^4.10.0",
         "react-native-linear-gradient": "^2.6.2",
         "react-native-modal": "^13.0.1",
         "react-native-pager-view": "^6.0.0",
@@ -78,6 +79,7 @@
         "react-native-snap-carousel": "^3.9.1",
         "react-native-sound": "^0.11.2",
         "react-native-splash-screen": "^3.3.0",
+        "react-native-status-bar-height": "^2.6.0",
         "react-native-svg": "^13.1.0",
         "react-native-tab-view": "^3.1.1",
         "react-native-vector-icons": "^9.1.0",
