--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@react-native-firebase/auth": "^14.9.4",
         "@react-native-firebase/messaging": "^14.9.4",
         "@react-native-google-signin/google-signin": "^7.2.2",
-        "@react-navigation/bottom-tabs": "^6.3.1",
+        "@react-navigation/bottom-tabs": "^6.4.0",
         "@react-navigation/core": "^6.2.1",
         "@react-navigation/drawer": "^6.4.1",
         "@react-navigation/native": "^6.0.10",
@@ -46,6 +46,7 @@
         "lodash.keys": "^4.2.0",
         "lottie-react-native": "^5.1.3",
         "moment": "^2.29.3",
+        "plotly.js": "^2.16.1",
         "prop-types": "^15.8.1",
         "react": "17.0.2",
         "react-i18next": "^9.0.10",
@@ -67,7 +68,7 @@
         "react-native-progress": "^5.0.0",
         "react-native-push-notification": "^8.1.1",
         "react-native-radio-buttons-group": "^2.2.11",
-        "react-native-reanimated": "^2.9.1",
+        "react-native-reanimated": "^2.12.0",
         "react-native-render-html": "^6.3.4",
         "react-native-restart": "^0.0.24",
         "react-native-safe-area-context": "^4.2.5",
