--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 33
         targetSdkVersion = 33
+        kotlin_version = '1.6.10' // <- add this line
 
         googlePlayServicesAuthVersion = "19.2.0"
 
@@ -24,18 +25,26 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:7.2.0')
+        classpath('com.android.tools.build:gradle:7.1.1')
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
         classpath 'com.google.gms:google-services:4.3.10' // <--- use this version or newer
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // <- add this line
+
     }
 }
 
 
 allprojects {
+    configurations.all {
+       resolutionStrategy {
+           // Remove this override in 0.65+, as a proper fix is included in react-native itself.
+           force "com.facebook.react:react-native:" + "0.69.6"
+       }
+    }
     repositories {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
